[tool.poetry]
name = "autofake"
version = "0.4.0"
description = ""
authors = ["Agustin Marquez <agusdmb@gmail.com>"]
repository = "https://github.com/agusdmb/autofake"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
mypy = "^0.991"
pylint = "^2.15.10"
isort = "^5.11.4"
coverage = "^7.1.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
  # "C0103",  # Argument name X doesnt conform to snake_case naming style
  "C0114",  # Missing module docstring
  "C0115",  # Missing class docstring
  "C0116",  # Missing function or method docstring
  # "R0902",  # Too many instance attributes
  # "R0903",  # Too few public methods
  # "R0913",  # Too many arguments
  # "R0914",  # Too many local variables
  # "W0212",  # Access to a protected member
  # "W0511",  # TODO XXX FIXME
  # "R0801",  # similarities
]
extension-pkg-whitelist = "pydantic"

